--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,3 +12,9 @@ Style/StringLiterals:
 
 Style/TrailingComma:
   EnforcedStyleForMultiline: comma
+
+# 1.8 compatible :(
+Style/HashSyntax:
+  EnforcedStyle: hash_rockets
+  Exclude:
+    - Rakefile
